--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <section>
       <div class="container2">
-        <div class="section-wraper section-wraper2">
+        <div class="section-wraper contact-wraper2">
           <h3 class="h3home1">
             აქ ყველაფერს პირდაპირი გაგებით თვალები აქვს „ჟოლოფსაც“კი
           </h3>
