--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-	<head lang="en">
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Main Page</title>
@@ -8,6 +8,14 @@
       src="https://kit.fontawesome.com/a0b71cd01f.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One&family=Bungee&family=Kaushan+Script&family=Lobster&family=Mooli&family=Orbitron&family=Pacifico&family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="//cdn.web-fonts.ge/fonts/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="icon" type="image/x-icon" href="images/icon.png" />
     <link
@@ -18,66 +26,90 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
   </head>
-<body>
-	<header>
-		<div class="conteiner">
-			<div class="section-wraper header-wrap">
-				<a href="index.html">
-					<img
-						src="images/otakhi.jpeg"
-						alt="otakhi's cartoon cat"
-						class="otakhilogo"
-					/>
-				</a>
-				<nav class="nav-nav">
-					<ul class="nav-ul">
-						<li>
-							<a href="index.html" class="color"> მთავარი </a>
-						</li>
-						<li>
-							<a href="menu.html" class="color"> მენიუ </a>
-						</li>
-						<li>
-							<a href="contact.html" class="color active"> კონტაქტი </a>
-						</li>
-					</ul>
-				</nav>
-				<!-- <i class="fa-solid fa-bars"></i> -->
-			</div>
-		</div>
-	</header>
-
-	<section>
-		<div class="container">
-			<div class="section-wraper">
-				<h3 class="h3menu1 h3contact"> You'll never feel lonely after visiting us. Fill yourself up with warmness and happiness </h3>
-				<img src="images/eyes.jpeg" alt="eyes foto otakhi" class="eyes">
-				<div class="contact">
-					<h3 class="contactinfo"> We're looking forward to hearing from you: <a href="contact2.html"> (for English 👈) </a></h3>
-						<ul>
-							<li> <span class="contactinfo2"> მისამართი:</span> <a href="https://maps.app.goo.gl/961VgKCfB347AcyP8" target="_blank"> </iframe> ძმები ზუბალაშვილების ქ. 6 </a> </li>
-							<li> <span class="contactinfo2"> ტელ: </span> <a href="tel:+995 595 53 03 83"> 595 53 03 83 </a> </li>
-							<li> <span class="contactinfo2"> ელ. ფოსტა: </span> <a href="mailto:otakhi.cafe@gmail.com?subject= Welcome to OTAKHI"> otakhi.cafe@gmail.com </a> </li>
-						</ul>
-				</div>
-			</div>
-	</section>
-	<footer>
-		<div class="container2">
-			<div class="section-wraper footer1-1">
-				<div class="footer1-2">
-					<div class="footer1">
-						<img
-							src="images/otakhi2.jpeg"
-							alt="word OTAKHI in written form"
-						/>
-					</div>
-					<div class="footer1">
-						<img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
-</body>
+  <body>
+    <header>
+      <div class="conteiner">
+        <div class="section-wraper header-wrap">
+          <a href="index.html">
+            <img
+              src="images/otakhi.jpeg"
+              alt="otakhi's cartoon cat"
+              class="otakhilogo"
+            />
+          </a>
+          <nav class="nav-nav">
+            <ul class="nav-ul">
+              <li>
+                <a href="index.html" class="color"> მთავარი </a>
+              </li>
+              <li>
+                <a href="menu.html" class="color"> მენიუ </a>
+              </li>
+              <li>
+                <a href="contact.html" class="color active"> კონტაქტი </a>
+              </li>
+            </ul>
+          </nav>
+          <!-- <i class="fa-solid fa-bars"></i> -->
+        </div>
+      </div>
+    </header>
+    <section>
+      <div class="container">
+        <div class="section-wraper contact-wraper">
+          <h3>
+            You'll never feel lonely after visiting us. Fill yourself up with
+            warmness and happiness
+          </h3>
+          <img src="images/eyes.jpeg" alt="eyes foto otakhi" />
+          <div class="contact">
+            <h3>
+              დაგვიკავშირდით:
+              <a href="contact2.html"> (for English 👈) </a>
+            </h3>
+            <ul>
+              <li class="contact-li">
+                <span> მისამართი:</span>
+                <a
+                  href="https://www.google.com/maps/place/6+%E1%83%AB%E1%83%9B%E1%83%94%E1%83%91%E1%83%98+%E1%83%96%E1%83%A3%E1%83%91%E1%83%90%E1%83%9A%E1%83%90%E1%83%A8%E1%83%95%E1%83%98%E1%83%9A%E1%83%94%E1%83%91%E1%83%98%E1%83%A1+%E1%83%A5%E1%83%A3%E1%83%A9%E1%83%90,+%E1%83%97%E1%83%91%E1%83%98%E1%83%9A%E1%83%98%E1%83%A1%E1%83%98+0108,+%E1%83%A1%E1%83%90%E1%83%A5%E1%83%90%E1%83%A0%E1%83%97%E1%83%95%E1%83%94%E1%83%9A%E1%83%9D/@41.6970625,44.7962801,17z/data=!3m1!4b1!4m6!3m5!1s0x40440ce88a860fc1:0xcada5508fb64a222!8m2!3d41.6970625!4d44.7962801!16s%2Fg%2F11g_p65vn?entry=ttu"
+                  target="_blank"
+                >
+                  ძმები ზუბალაშვილების ქ. 6
+                </a>
+              </li>
+              <li class="contact-li">
+                <span> ტელ: </span>
+                <a href="tel:+995595530383"> +995 595 53 03 83 </a>
+              </li>
+              <li class="contact-li">
+                <span> ელ. ფოსტა: </span>
+                <a
+                  href="mailto:otakhi.cafe@gmail.com?subject=Welcome%20to%20OTAKHI"
+                >
+                  otakhi.cafe@gmail.com
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container2">
+        <div class="section-wraper footer1-1">
+          <div class="footer1-2">
+            <div class="footer1">
+              <img
+                src="images/otakhi2.jpeg"
+                alt="word OTAKHI in written form"
+              />
+            </div>
+            <div class="footer1">
+              <img src="images/otakhi3.jpeg" alt="otakhi's cat in footer" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
