updated contact page

--- a/contact2.html
+++ b/contact2.html
@@ -40,13 +40,13 @@
           <nav class="nav-nav">
             <ul class="nav-ul">
               <li>
-                <a href="index.html" class="color"> მთავარი </a>
+                <a href="index.html" class="color"> Main </a>
               </li>
               <li>
-                <a href="menu.html" class="color"> მენიუ </a>
+                <a href="menu.html" class="color"> Menu </a>
               </li>
               <li>
-                <a href="contact.html" class="color active"> კონტაქტი </a>
+                <a href="contact.html" class="color active"> Contact </a>
               </li>
             </ul>
           </nav>
